# its-high-noon

./: .gitignore  API.md  docker-compose.yml  dockerfile  pyproject.toml
its-high-noon-main/: LICENSE  README.md  docker-compose.yml
its-high-noon-main/src/: logger.py  main.py
its-high-noon-main/src/database/: question.py
its-high-noon-main/src/line/: daily.py
locales/: en.json  zh_tw.json
src/: const.py  i18n.py  main.py  scheduler.py
src/database/: __init__.py  id.py  limiter.py  pool.py  question.py  user.py
src/line/: __init__.py  cmd.py  daily.py  webhook.py
templates/: teapot.html
